Добавлены новые настройки для работы с Thirdweb, включая параметры для проверки баланса и ограничения на количество сообщений в чате. Обновлены схемы и модели для поддержки токенов и их требований. Реализованы функции для проверки доступа пользователей на основе их баланса. Обновлены маршруты для интеграции новых функций.

--- a/.env.template
+++ b/.env.template
@@ -22,8 +22,12 @@ DB_PORT=5432
 # OpenAI settings
 OPENAI_API_KEY=YourOpenAIKey                # API key for OpenAI services
 OPENAI_MODEL=gpt-4o-mini                    # Model to use for OpenAI requests
+DEFAULT_CHAT_CONTEXT_LIMIT_NONCE=15        # Maximum number of messages in chat context
 
 # App limits
 MAX_DAILY_MESSAGES=10                       # Maximum number of AI-generated messages per user per day
 
-
+THIRDWEB_APP_ID=YourThirdwebAppId
+THIRDWEB_PRIVATE_KEY=YourThirdwebPrivateKey
+BALANCE_CHECK_LIFETIME_SECONDS = 60*60*24 # default 24 hours
+ALLOW_CHAT_WHEN_SERVER_IS_DOWN=False       # If True, allow chat even if the thirdweb server is down
