Фикс BALANCE_CHECK_LIFETIME_SECONDS в шаблоне .env.template с 60*60*24 на 86400 тк в переменных окружения нет мат операций

--- a/.env.template
+++ b/.env.template
@@ -29,5 +29,5 @@ MAX_DAILY_MESSAGES=10                       # Maximum number of AI-generated mes
 
 THIRDWEB_APP_ID=YourThirdwebAppId
 THIRDWEB_PRIVATE_KEY=YourThirdwebPrivateKey
-BALANCE_CHECK_LIFETIME_SECONDS = 60*60*24 # default 24 hours
+BALANCE_CHECK_LIFETIME_SECONDS=86400       # default 24 hours
 ALLOW_CHAT_WHEN_SERVER_IS_DOWN=False       # If True, allow chat even if the thirdweb server is down
