Добавлены новые провайдеры ИИ для OpenAI и Gemini, обновлены настройки и модели для поддержки новых API. Реализована логика выбора провайдера в зависимости от настроек чата. Обновлены миграции для добавления новых значений в перечисления моделей.

--- a/.env.template
+++ b/.env.template
@@ -21,9 +21,10 @@ DB_HOST=2eden_db
 DB_PORT=5432
 
 
-# OpenAI settings
+# AI providers keys and settings
 OPENAI_API_KEY=YourOpenAIKey                # API key for OpenAI services
-OPENAI_MODEL=gpt-4o-mini                    # Model to use for OpenAI requests
+GEMINI_API_KEY=YourGeminiApiKey            # API key for Gemini services
+
 DEFAULT_CHAT_CONTEXT_LIMIT_NONCE=15        # Maximum number of messages in chat context
 
 # App limits
