Добавлены настройки домена в конфигурацию и обновлен шаблон .env.template. Изменено сообщение о входе в систему для улучшения пользовательского опыта.

--- a/.env.template
+++ b/.env.template
@@ -3,7 +3,7 @@
 # Server settings
 HOST=0.0.0.0
 PORT=8000
-
+DOMAIN=localhost:8000
 # Application settings
 DEBUG=True                                   # Enable debug mode for development
 SECRET_KEY=SomeSecretKey                     # Used for various cryptographic operations
