Добавлено новое поле THIRDWEB_MCP_SSE_URL в файл конфигурации и обновлена логика инициализации списка MCP серверов в mcp_servers.py для использования этого параметра. Это улучшает гибкость конфигурации и позволяет динамически задавать URL для сервера Thirdweb.

--- a/.env.template
+++ b/.env.template
@@ -35,5 +35,6 @@ THIRDWEB_PRIVATE_KEY=YourThirdwebPrivateKey
 BALANCE_CHECK_LIFETIME_SECONDS=86400       # default 24 hours
 ALLOW_CHAT_WHEN_SERVER_IS_DOWN=False       # If True, allow chat even if the thirdweb server is down
 
+THIRDWEB_MCP_SSE_URL=URL
 SMITHERY_API_KEY=APIKEY # required for all remote mcp servers from smithery
 EXA_SEARCH_API_KEY=APIKEY # for exa search tools
