Добавлены новые настройки для работы с Web3: добавлен ключ API ANKR в .env.template и класс Web3Service для получения балансов токенов ERC20 и ERC721. Обновлена логика проверки доступа пользователей с использованием нового сервиса, что улучшает интеграцию с Web3 и повышает читаемость кода. Также добавлены новые исключения для обработки ошибок при взаимодействии с Web3.

--- a/.env.template
+++ b/.env.template
@@ -34,6 +34,8 @@ THIRDWEB_APP_ID=YourThirdwebAppId
 THIRDWEB_PRIVATE_KEY=YourThirdwebPrivateKey
 BALANCE_CHECK_LIFETIME_SECONDS=86400       # default 24 hours
 ALLOW_CHAT_WHEN_SERVER_IS_DOWN=False       # If True, allow chat even if the thirdweb server is down
+ANKR_API_KEY=qwerqwerqwer # API KEY FOR WEB3 query
+
 
 THIRDWEB_MCP_SSE_URL=URL
 SMITHERY_API_KEY=APIKEY # required for all remote mcp servers from smithery
