Автоматические задачи парсинга постов.

--- a/.env.template
+++ b/.env.template
@@ -39,3 +39,13 @@ ANKR_API_KEY=qwerqwerqwer # API KEY FOR WEB3 query
 
 SMITHERY_API_KEY=APIKEY # required for all remote mcp servers from smithery
 EXA_SEARCH_API_KEY=APIKEY # for exa search tools
+
+# Celery / Redis
+REDIS_HOST=sidelined_redis
+REDIS_PORT=6379
+# Период синхронизации постов (секунд). 60 – для локального dev, 1800 – для прод.
+POST_SYNC_PERIOD_SEC=60
+
+# Twitter API keys
+X_RAPIDAPI_KEY=APIKEY
+X_TWITTER_API_KEY=APIKEY
