--- a/.env.template
+++ b/.env.template
@@ -1,25 +1,19 @@
 #! check config.py to see all settings and required variables
 
 # Server settings
-HOST=0.0.0.0
-PORT=8000
 DOMAIN=localhost:8000
+
 # Application settings
 DEBUG=True                                   # Enable debug mode for development
 SECRET_KEY=SomeSecretKey                     # Used for various cryptographic operations
 JWT_SECRET_KEY=SomeSecretKey2                # Used for JWT token signing
-JWT_ALGORITHM=HS256                          # Algorithm used for JWT token encoding
-JWT_ACCESS_TOKEN_EXPIRE_MINUTES=30           # Expiration time for access tokens in minutes
-JWT_REFRESH_TOKEN_EXPIRE_DAYS=7              # Expiration time for refresh tokens in days
 CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000,https://2eden.local
 
 # Database settings
-DB_USER=2eden_admin
-DB_PASSWORD=YourPasswordHere
-DB_NAME=2eden_db
-DB_HOST=2eden_db
-DB_PORT=5432
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/postgres
 
+# Celery / Redis
+REDIS_URL=redis://localhost:6379
 
 # AI providers keys and settings
 OPENAI_API_KEY=YourOpenAIKey                # API key for OpenAI services
@@ -27,24 +21,11 @@ GEMINI_API_KEY=YourGeminiApiKey            # API key for Gemini services
 
 DEFAULT_CHAT_CONTEXT_LIMIT_NONCE=15        # Maximum number of messages in chat context
 
-# App limits
-MAX_DAILY_MESSAGES=10                       # Maximum number of AI-generated messages per user per day
-
-THIRDWEB_APP_ID=YourThirdwebAppId
-THIRDWEB_PRIVATE_KEY=YourThirdwebPrivateKey
 BALANCE_CHECK_LIFETIME_SECONDS=86400       # default 24 hours
-ALLOW_CHAT_WHEN_SERVER_IS_DOWN=False       # If True, allow chat even if the thirdweb server is down
 ANKR_API_KEY=qwerqwerqwer # API KEY FOR WEB3 query
 
 
 SMITHERY_API_KEY=APIKEY # required for all remote mcp servers from smithery
-EXA_SEARCH_API_KEY=APIKEY # for exa search tools
-
-# Celery / Redis
-REDIS_HOST=sidelined_redis
-REDIS_PORT=6379
-# Период синхронизации постов (секунд). 60 – для локального dev, 1800 – для прод.
-POST_SYNC_PERIOD_SEC=60
 
 # Twitter API keys
 X_RAPIDAPI_KEY=APIKEY
