Добавлено новое перечисление ChainFamily для поддержки различных блокчейнов (EVM и SOLANA). Обновлены функции для работы с адресами пользователей, включая проверку и создание записей с учетом семейства цепочки. Также внесены изменения в миграции базы данных для добавления нового поля chain_family в модель WalletAddress и соответствующие изменения в файле requirements.txt для добавления зависимости PyNaCl.

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ openai
 google-genai
 eth-account
 eth-utils
+PyNaCl
 alembic-postgresql-enum
 requests
 mcp
@@ -30,3 +31,4 @@ python-multipart
 bcrypt
 itsdangerous>=2.1.0
 starlette-admin[sqlalchemy]
+base58
