--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ langchain-google-genai
 langchain-mcp-adapters
 duckduckgo-search
 langchain-community
+langchain-google-community
 langgraph
 smithery
 jsonschema
